--- a/views/Blog/profil.html
+++ b/views/Blog/profil.html
@@ -3,8 +3,8 @@
 		<h4>PROFIL</h4>
 		<div class="account">
 	        <a href="../profil" class="photo">
-	            <img src="../assets/img/user-test.gif" alt="photo profil">
-	            <div class="photo-username">Lili {{session.pseudo}}</div>
+	            <img src="{{ session.picture }}" alt="photo profil">
+	            <div class="photo-username">{{session.pseudo}}</div>
 	        </a>
 	    </div>
 	</div>
