--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -19,8 +19,8 @@
 	            <div class="account">
 			        <p class="post"><a href="/articles" title="">Poster un article</a></p>
 			        <a href="#" class="photo">
-			            <img src="../assets/img/user-test.gif" alt="photo profil">
-			            <div class="photo-username">{{session.pseudo}} lili</div>
+			            <img src="{{ session.picture }}" alt="photo profil">
+			            <div class="photo-username">{{session.pseudo}}</div>
 			        </a>
 			        <div id="menu">
 			            <ul class="clearfix">
