begin dev front fro create blog

--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -15,12 +15,12 @@
 				    <button type="submit" name="ok">ok</button>
 			    </form>
             </li>
-           
+           		
 	            <div class="account">
 			        <p class="post"><a href="/articles" title="">Poster un article</a></p>
 			        <a href="#" class="photo">
 			            <img src="../assets/img/user-test.gif" alt="photo profil">
-			            <div class="photo-username">{{session.pseudo}} lili</div>
+			            <div class="photo-username">{{session.pseudo}}</div>
 			        </a>
 			        <div id="menu">
 			            <ul class="clearfix">
