change blogs to blog

--- a/views/BaseFront/blogsHome.html
+++ b/views/BaseFront/blogsHome.html
@@ -2,12 +2,12 @@
     <ul>
         <li class="clearfix">
             <a href="#" title="View the blogs">
-                <img src="{{blogs.picture}}"  alt="blogs attached picture">
-                <p class="blog-title">{{blogs.name}}</p>
+                <img src="{{blog.picture}}"  alt="blog attached picture">
+                <p class="blog-title">{{blog.name}}</p>
             </a>
             <p class="blog-infos">
-                <a href="#" class="userFile" data-id="{{ blogs.id }}">{{blogs.author}}</a>
-                <span>{{blogs.createdAt}}</span>
+                <a href="#" class="userFile" data-id="{{ blogs.id }}">{{blog.author}}</a>
+                <span>{{blog.createdAt}}</span>
             </p>
         </li>
     </ul>
