--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-custom navbar-fixed-top">
 	<div id="container">
 		<div class="navbar-header">
@@ -26,7 +25,7 @@
 			            <ul class="clearfix">
 			                <li><a href="/profil">Mon profil</a></li>
 			                <li><a href="#" class="userBlog" >Mon Blog</a></li>
-			                <li><a href="#">Déconnexion</a></li>
+			                <li><a href="{{base_URI}}/logout">Déconnexion</a></li>
 			            </ul>
 			        </div>
 			    </div>
