--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -97,6 +97,8 @@ nav form button {
 .account .photo img {
     position: relative;
     float: left;
+    width: 64px;
+    height: 47px;
 }
 .account .photo .photo-username {
     float: left;
