Ajout bouton edit

--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -16,7 +16,7 @@
             </li>
            		
 	            <div class="account">
-			        <p class="post"><a href="/articles" title="">Poster un article</a></p>
+			        <p class="post"><a href="/articles" title="">Creer un blog</a></p>
 			        <a href="#" class="photo">
 			            <img src="{{ session.picture }}" alt="photo profil">
 			            <div class="photo-username">{{session.pseudo}}</div>
