--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -109,7 +109,8 @@ h2 {
 }
 .block {
 	width: 48%;
-	display: inline-block;
+	float: left;
+	margin-left: 5px;
 }
 .block div {
 	margin-left: 43px;
@@ -377,6 +378,24 @@ form button {
 }
 .main .user h3 {
 	padding-left: 116px;
+}
+.block p:first-child {
+	float: left;
+}
+.block  p:nth-child(2) {
+	float: right;
+	margin-top: -14px;
+}
+.infos .post a {
+	display: inline-block;
+	position: relative;
+	background: #575050 url("../img/plus.png") no-repeat scroll 0.9em 0.9em;
+	color: #FFF;
+	text-transform: uppercase;
+	font-size: 0.5em;
+	padding: 2em 2em 2em 2em;
+	text-decoration: none;
+	border-radius: 4em;
 }
 
 /*MEDIA QUERIE*/
