--- a/views/BaseBack/info.html
+++ b/views/BaseBack/info.html
@@ -1,4 +1,5 @@
-<div>
+<div class="infos">
 	<p><a href="#">{{ blog.name }}</a></p>
+	<p class="post"><a href="/articles" title=""></a></p>
 </div>
-
+	
