--- a/views/BaseBack/info.html
+++ b/views/BaseBack/info.html
@@ -1,5 +1,5 @@
 <div class="infos">
-	<p><a href="#">{{ blog.name }}</a></p>
+	<a href="#">{{ blog.name }}</a>
 	<p class="post"><a href="/articles" title=""></a></p>
 </div>
 	
