--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -375,6 +375,7 @@ form button {
 	font-size: 12px;
 	color: #B2B2B2;
 	padding: 44px 0px 0px 0px;
+	margin-top: -35px;
 }
 .main .user h3 {
 	padding-left: 116px;
@@ -397,6 +398,20 @@ form button {
 	text-decoration: none;
 	border-radius: 4em;
 }
+div.upload {
+    width: 157px;
+    height: 57px;
+    background: none;
+    overflow: hidden;
+}
+div.upload input {
+	display: block !important;
+	width: 157px !important;
+	height: 31px !important;
+	opacity: 0 !important;
+	overflow: hidden !important;
+	margin-top: -62px;
+	}
 
 /*MEDIA QUERIE*/
 
