--- a/views/BaseBack/info.html
+++ b/views/BaseBack/info.html
@@ -2,4 +2,16 @@
 	<a href="#">{{ blog.name }}</a>
 	<p class="post"><a href="/articles" title=""></a></p>
 </div>
+<div class="infos">
+	<a href="#">{{ blog.name }}</a>
+	<p class="post"><a href="/articles" title=""></a></p>
+</div>
+<div class="infos">
+	<a href="#">{{ blog.name }}</a>
+	<p class="post"><a href="/articles" title=""></a></p>
+</div>
+<div class="infos">
+	<a href="#">{{ blog.name }}</a>
+	<p class="post"><a href="/articles" title=""></a></p>
+</div>
 	
