--- a/views/BaseBack/articles.html
+++ b/views/BaseBack/articles.html
@@ -3,10 +3,10 @@
 {% block rootclass %}articles{% endblock %}
 {% block stylesheets %}
 {% parent %}
-<link href="../assets/css/bootstrap.css" rel="stylesheet">
-<link href="../assets/css/header.css" rel="stylesheet">
-<link href="../assets/css/grayscale.css" rel="stylesheet">
-<link href="../assets/css/back.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/header.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/grayscale.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/back.css" rel="stylesheet">
 {% endblock %}
 {% block body %}
 	{% include 'header.html' %}
@@ -27,6 +27,6 @@
 	</div>
 {% block javascripts%}
 	{% parent %}
-		<script type="text/javascript" src="../assets/js/home.js"></script>
+		<script type="text/javascript" src="{{ base_URI }}/assets/js/home.js"></script>
 {% endblock %}
 {% endblock %}
