--- a/views/BaseBack/create.html
+++ b/views/BaseBack/create.html
@@ -2,10 +2,10 @@
 {% block title %}BlogCreator{% endblock %}
 {% block rootclass %}create{% endblock %}
 {% block stylesheets %}
-<link href="../assets/css/bootstrap.css" rel="stylesheet">
-<link href="../assets/css/header.css" rel="stylesheet">
-<link href="../assets/css/grayscale.css" rel="stylesheet">
-<link href="../assets/css/back.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/header.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/grayscale.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/back.css" rel="stylesheet">
 {% endblock %}
 {% block body %}
 	{% include 'header.html' %}
@@ -29,8 +29,8 @@
 	</div>
 {% block javascripts%}
 	{% parent %}
-		<script type="text/javascript" src="../assets/js/tinymce.min.js"></script>
-		<script type="text/javascript" src="../assets/js/home.js"></script>
+		<script type="text/javascript" src="{{ base_URI }}/assets/js/tinymce.min.js"></script>
+		<script type="text/javascript" src="{{ base_URI }}/assets/js/home.js"></script>
 		<script>tinymce.init({ 
     	selector:'#myTextarea',
     	theme: 'modern',
