--- a/views/BaseBack/header.html
+++ b/views/BaseBack/header.html
@@ -3,7 +3,7 @@
 		<div class="navbar-header">
 			<h1 class="logo">
 				<a class="navbar-brand page-scroll" href="/accueil">
-					<img src="../assets/img/logo3.png">
+					<img src="{{ base_URI }}/assets/img/logo3.png">
 				</a>
 			</h1>
 			<ul class="nav navbar-nav">
