--- a/views/BaseBack/message.html
+++ b/views/BaseBack/message.html
@@ -1,5 +1,5 @@
 <div class="message">
-	<img src="../assets/img/user-test.gif" alt="profil">
+	<img src="{{ base_URI }}/assets/img/user-test.gif" alt="profil">
 	<div class="content_post w250">
 		<h3>{{ message.author}}</h3>
 		<div class="post_desc">
@@ -18,7 +18,7 @@
     </div>
 </div>
 <div class="message">
-	<img src="../assets/img/user-test.gif" alt="profil">
+	<img src="{{ base_URI }}/assets/img/user-test.gif" alt="profil">
 	<div class="content_post w250">
 		<h3>Lili</h3>
 		<div class="post_desc">
@@ -37,7 +37,7 @@
     </div>
 </div>
 <div class="message">
-	<img src="../assets/img/user-test.gif" alt="profil">
+	<img src="{{ base_URI }}/assets/img/user-test.gif" alt="profil">
 	<div class="content_post w250">
 		<h3>Lili</h3>
 		<div class="post_desc">
@@ -56,7 +56,7 @@
     </div>
 </div>
 <div class="message">
-	<img src="../assets/img/user-test.gif" alt="profil">
+	<img src="{{ base_URI }}/assets/img/user-test.gif" alt="profil">
 	<div class="content_post w250">
 		<h3>Lili</h3>
 		<div class="post_desc">
