--- a/views/BaseBack/profil.html
+++ b/views/BaseBack/profil.html
@@ -3,10 +3,10 @@
 {% block rootclass %}profil{% endblock %}
 {% block stylesheets %}
 
-<link href="../assets/css/bootstrap.css" rel="stylesheet">
-<link href="../assets/css/header.css" rel="stylesheet">
-<link href="../assets/css/grayscale.css" rel="stylesheet">
-<link href="../assets/css/back.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/bootstrap.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/header.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/grayscale.css" rel="stylesheet">
+<link href="{{ base_URI }}/assets/css/back.css" rel="stylesheet">
 {% endblock %}
 {% block body %}
 	{% include 'header.html' %}
@@ -14,7 +14,7 @@
 	<div class="main">
 		<div class="wrap">
 			<div class="user">
-				<img src="../assets/img/default.png" alt="profil">
+				<img src="{{ base_URI }}/assets/img/default.png" alt="profil">
 				<h3>{{session.pseudo}}</h3>
 				<p>
 					<form action="" method="post" enctype="multipart/form-data">
@@ -57,6 +57,6 @@
 	</div>
 {% block javascripts%}
 	{% parent %}
-		<script type="text/javascript" src="../assets/js/home.js"></script>
+		<script type="text/javascript" src="{{ base_URI }}/assets/js/home.js"></script>
 {% endblock %}
 {% endblock %}
