--- a/views/BaseFront/base.html
+++ b/views/BaseFront/base.html
@@ -5,8 +5,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1"> 
             <title>{% block title %}BlogCreator{% endblock %}</title>
             <meta name="description" content="Création de Blog" />
-            <link rel="icon" href="../../assets/img/favicon.gif">
-           <script type="text/javascript" src="../assets/js/notifier.js"></script>
+            <link rel="icon" href="{{ base_URI }}/assets/img/favicon.gif">
+           <script type="text/javascript" src="{{ base_URI }}/assets/js/notifier.js"></script>
             {% block stylesheets %}{% endblock %}
     </head>
     <body class="{% block rootclass %}{% endblock %}" data-spy="scroll" data-target=".navbar-fixed-top">
