--- a/views/BaseFront/header.html
+++ b/views/BaseFront/header.html
@@ -3,7 +3,7 @@
 		<div class="logo">
 			<h1>
 					<!-- Si upload photo-->
-				<a href="#"><img src="../assets/img/test.jpg" alt="Image de mon blog"></a>
+				<a href="#"><img src="{{ base_URI }}/assets/img/test.jpg" alt="Image de mon blog"></a>
 					<!-- else 
 					qqchose d'autres-->
 			</h1>
