--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -3,7 +3,7 @@
         <h4>COMMENTAIRES</h4>
     </div>
     <div class="comment_users">
-        <img src="../assets/img/test-user.jpeg">
+        <img src="{{ base_URI }}/assets/img/test-user.jpeg">
         <div class="content_post w250">
             <p><a href="">{{ comment.picture }}</a></p>
             <div class="post_desc">
