--- a/views/Blog/home.html
+++ b/views/Blog/home.html
@@ -2,7 +2,7 @@
 {% block title %}MyBlog{% endblock %}
 {% block rootclass %}blog{% endblock %}
 {% block stylesheets %}
-<link rel="stylesheet" type="text/css" href="../assets/css/homeBlog.css">
+<link rel="stylesheet" type="text/css" href="{{ base_URI }}/assets/css/homeBlog.css">
 {% endblock %}
 {% block body %}
   {% include '../BaseFront/header.html'%}
