--- a/views/BaseBack/profil.html
+++ b/views/BaseBack/profil.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 
-			<div class="infos">
+			<div class="info">
 			<div class="block">
 				<h2>Mes Blogs</h2>
 				{% for blog in blogs %}
