--- a/views/Blog/articles.html
+++ b/views/Blog/articles.html
@@ -12,8 +12,8 @@
         </div>
         <div class="post_meta">
             <div class="meta_info">
-                <span class="date">{{ article.createdAt }}</span>
-            </div>
+                <span class="date">{{ article.createdAt|date('d M Y - H:i') }}</span>
+            </div> 
             <div class="meta_info">
         <span class="comment">{{ article.nbComments }}</span>
             </div>
