--- a/views/Blog/comment.html
+++ b/views/Blog/comment.html
@@ -11,7 +11,7 @@
             </div>
             <div class="post_meta">
                 <div class="meta_info">
-                    <span class="date">{{ comment.createdAt}}</span>
+                    <span class="date">{{ comment.createdAt|date('d M Y - H:i')}}</span>
                 </div>
                 <div>
                     <form>
