--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -18,6 +18,7 @@
 	border-left: 1px solid rgb(239, 230, 210);
 	border-right: 1px solid rgb(239, 230, 210);
 	padding: 30px;
+	margin-top: 130px;
 }
 .main img {
 	float: left;
