--- a/views/BaseBack/accueil.html
+++ b/views/BaseBack/accueil.html
@@ -12,15 +12,17 @@
 	{% include 'header.html' %}
     
 	<section id="blogs" class="container content-section text-center">
-        <div class="row">
-        	<div>
-        		<h2>Blogs</h2>
-        	</div>
-            <div class="blogs line">
-            {% for blog in blogs %}
-                {% include '../BaseFront/blogsHome.html' %}
-            {% endfor %}
-    		</div>
+        <div class="wrap">
+            <div class="row">
+            	<div>
+            		<h2>Blogs</h2>
+            	</div>
+                <div class="blogs line">
+                {% for blog in blogs %}
+                    {% include '../BaseFront/blogsHome.html' %}
+                {% endfor %}
+        		</div>
+            </div>
         </div>
     </section>
 
