--- a/views/Blog/detailArticle.html
+++ b/views/Blog/detailArticle.html
@@ -22,7 +22,7 @@
 					        
 					        <div class="post_meta">
 					            <div class="meta_info">
-					                <span class="date">{{ article.createdAt}}</span>
+					                <span class="date">{{ article.createdAt|date('d M Y - H:i') }}</span>
 					            </div>
 					            <div class="meta_info">
 					        <span class="comment">{{ article.nbComments }}</span>
