--- a/views/BaseBack/articles.html
+++ b/views/BaseBack/articles.html
@@ -13,7 +13,7 @@
 	<div class="main">
 		<div class="wrap">
 			<div>
-	        	<a href="/create"><button class="button button--pipaluk button--inverted clear">Poster</button></a>
+	        	<a href="/create/article/{{actualBlog}}"><button class="button button--pipaluk button--inverted clear">Poster</button></a>
 	        </div>
 			<div>
 	        	<h2>Mes Articles</h2>
