--- a/views/BaseBack/info.html
+++ b/views/BaseBack/info.html
@@ -1,5 +1,4 @@
 <div class="infos">
-	<a href="#">{{ blog.name }}</a>
-	<p class="post"><a href="/articles" title=""></a></p>
+	<a href="/articles/{{blog._id}}">{{ blog.name }}</a>
+	<p class="post"><a href="/articles/{{blog._id}}" title="ajouter des articles à {{blog.name}}"></a></p>
 </div>
-	
