--- a/views/BaseBack/info.html
+++ b/views/BaseBack/info.html
@@ -1,17 +1,4 @@
 <div class="infos">
-	<a href="/articles/{{blog._id}}">{{ blog.name }}</a>
+	<a href="{{base_URI}}/blog/{{session.pseudo}}/{{blog._id}}">{{ blog.name }}</a>
 	<p class="post"><a href="/articles/{{blog._id}}" title="ajouter des articles à {{blog.name}}"></a></p>
-</div>
-
-<div class="infos">
-	<a href="#">{{ blog.name }}</a>
-	<p class="post"><a href="/articles" title=""></a></p>
-</div>
-<div class="infos">
-	<a href="#">{{ blog.name }}</a>
-	<p class="post"><a href="/articles" title=""></a></p>
-</div>
-<div class="infos">
-	<a href="#">{{ blog.name }}</a>
-	<p class="post"><a href="/articles" title=""></a></p>
 </div>
