--- a/assets/css/back.css
+++ b/assets/css/back.css
@@ -241,11 +241,13 @@ input[type="submit"] {
     line-height: 18px;
     float: left;
     margin-right: 13px;
+    margin-top: 0px !important;
 }
 .articles .comment {
 	font-size: 12px;
 	color: #B2B2B2;
 	padding-left: 5px;
+
 }
 .articles .comment::before {
     content: "";
