check if i'm on my profile

--- a/views/BaseBack/message.html
+++ b/views/BaseBack/message.html
@@ -10,9 +10,11 @@
                 <span class="date">{{message.createdAt}}</span>
             </div>
             <div>
+                {% if mine == true %}
                 <form>
                     <button type="submit" id="suppr">X</button>
                 </form>
+                {% endif %}
             </div>
         </div>
     </div>
