change url to view one article

--- a/views/Blog/articles.html
+++ b/views/Blog/articles.html
@@ -3,7 +3,7 @@
     <div class="w250 img"><img src="{{base_URI}}/{{ article.picture }}"></div>
     <div class="content_post w250">
         <div class="post_title">
-            <a href="article">
+            <a href="{{base_URI}}/blog/{{author.name}}/{{curBlog}}/{{article._id|toString}}">
                 <h4>{{ article.title }}</h4>
             </a>
         </div>
